# project-delta

./: README.md  app.py  conftest.py  main.py  pyproject.toml
docs/: 01_overview.md  02_theory.md  03_architecture.md  04_agents.md  05_logic_and_learning.md  06_validation.md  appendices.md  roadmap.md
src/: __init__.py  batch_runner.py  comparison_engine.py  edu_game_model.py  payoff_config.py  payoff_engine.py  student_agent.py  visualization.py
tests/: test_batch_runner.py  test_comparison_engine.py  test_edu_game_model.py  test_payoff_engine.py  test_solara_integration.py
