[project]
name = "project-delta"
version = "0.1.0"
description = "a computational proof of the game-theoretic model for programming education"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mesa>=3.5.1",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

